force-app/main/default/objects/BMCServiceDesk__Incident__c/BMCServiceDesk__Incident__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpIncident</customHelpPage>
    <description>This object allows you to store data for incidents.</description>
    <label>Incident</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>