force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Assigned_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Assigned Email from IT</description>
    <inlineHelpText>Assigned Email from IT</inlineHelpText>
    <label>Assigned Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>