force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__ACApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ACApprovalStatus__c</fullName>
    <label>BCM Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>