force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Actual_Outage_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Actual_Outage_Time_Hours__c</fullName>
    <formula>BMCServiceDesk__actualOutageDuration__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Outage Time (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>