force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__actualOutageDuration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__actualOutageDuration__c</fullName>
    <label>Actual Outage Time (Min)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>