force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Additional_email_information__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Additional_email_information__c</fullName>
    <inlineHelpText>Use this field to add additional information to the email even after selecting the email template.</inlineHelpText>
    <label>Additional email information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>