force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Approval_Status__c</fullName>
    <description>Displayed in the Tickets and Requests list view only if added to the Self Service: View Tickets and Requests field set.</description>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>