force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Client_Account__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Client_Account__c</fullName>
    <formula>BMCServiceDesk__FKAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is automatically set to the account of the client who submitted the incident.</inlineHelpText>
    <label>Account~</label>
    <type>Text</type>
</CustomField>