force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Client_Manager__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Client_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>