force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Client_Phone__c</fullName>
    <label>Client Phone</label>
    <type>Phone</type>
</CustomField>