force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Client_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>