force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__clientEmail__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__clientEmail__c</fullName>
    <formula>BMCServiceDesk__FKClient__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Email</label>
    <type>Text</type>
</CustomField>