force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__clientFirstName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__clientFirstName__c</fullName>
    <formula>BMCServiceDesk__FKClient__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is automatically set to the first name of the client who submitted the incident.</inlineHelpText>
    <label>First Name</label>
    <type>Text</type>
</CustomField>