force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__clientLastName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__clientLastName__c</fullName>
    <formula>BMCServiceDesk__FKClient__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the last name of the client who is submitting the incident.</inlineHelpText>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>