force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Clock_Status__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Clock_Status__c</fullName>
    <formula>IF( BMCServiceDesk__FKStatus__r.BMCServiceDesk__workStatus__c== true &amp;&amp; BMCServiceDesk__FKStatus__r.BMCServiceDesk__state__c ==  true, $Label.bmcservicedesk__clockstatusrunning, IF( BMCServiceDesk__FKStatus__r.BMCServiceDesk__workStatus__c == false &amp;&amp; BMCServiceDesk__FKStatus__r.BMCServiceDesk__state__c==true,$Label.bmcservicedesk__clockstatuspaused,$Label.bmcservicedesk__clockstatusstopped))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the status of the clock that is used to calculate the actual work time for an incident.</inlineHelpText>
    <label>Work Clock Status</label>
    <type>Text</type>
</CustomField>