force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__ClosureCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClosureCategory__c</fullName>
    <label>Closure Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Resolved remotely, without the need for site visit.</fullName>
            </value>
            <value>
                <fullName>Unable to reproduce</fullName>
            </value>
            <value>
                <fullName>Unable to solve or in conflict with standards or policy</fullName>
            </value>
            <value>
                <fullName>Withdrawn by requester</fullName>
            </value>
            <value>
                <fullName>Workaround</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>