force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__completedDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__completedDate__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>