force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Compliant__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Compliant__c</fullName>
    <description>To check if the Incident is closed before due date or not.</description>
    <formula>IF(ISNULL(BMCServiceDesk__dueDateTime__c), &quot;YES&quot;, 
	( IF( ISNULL(BMCServiceDesk__closeDateTime__c), ( IF(BMCServiceDesk__dueDateTime__c &gt;= NOW(), &quot;YES&quot;, &quot;NO&quot;)), 
		( IF(BMCServiceDesk__dueDateTime__c &gt;= BMCServiceDesk__closeDateTime__c, &quot;YES&quot;, &quot;NO&quot;))
	))
)</formula>
    <label>Compliant</label>
    <type>Text</type>
</CustomField>