force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Compliments_and_Complaints__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Compliments_and_Complaints__c</fullName>
    <label>Compliments and Complaints</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>