force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__contactType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__contactType__c</fullName>
    <label>Incident Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Email message</fullName>
            </value>
            <value>
                <fullName>Email Other</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Fax, Letter, Paper form, or Memo</fullName>
            </value>
            <value>
                <fullName>Mail Listen</fullName>
            </value>
            <value>
                <fullName>MyIT</fullName>
            </value>
            <value>
                <fullName>Own observation</fullName>
            </value>
            <value>
                <fullName>Personal visit</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Self Service</fullName>
            </value>
            <value>
                <fullName>Walkup</fullName>
            </value>
            <value>
                <fullName>Web request form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>