force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Due_Date_Progress__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Due_Date_Progress__c</fullName>
    <formula>IF(AND(BMCServiceDesk__state__c, BMCServiceDesk__dueDateTime__c &lt; NOW()), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_red.gif&quot;, &quot;Due date of a record has passed&quot;), IF(AND(BMCServiceDesk__state__c,  BMCServiceDesk__Time_Remaining_Percentage__c &gt; 50), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_green.gif&quot;, &quot;More than 50% of time is remaining in the due date&quot;), IF(AND(BMCServiceDesk__state__c,  BMCServiceDesk__Time_Remaining_Percentage__c &lt;= 50), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_yellow.gif&quot;, &quot;Less than or equal to 50% of time is remaining in the due date&quot;), IF(AND(!BMCServiceDesk__state__c,  BMCServiceDesk__closeDateTime__c &lt;= BMCServiceDesk__dueDateTime__c), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/permissions_confirm16.gif&quot;, &quot;Due date met&quot;), IF(AND(!BMCServiceDesk__state__c,  BMCServiceDesk__closeDateTime__c &gt; BMCServiceDesk__dueDateTime__c), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/permissions_deny16.gif&quot;, &quot;Due date is not met&quot;), &apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows status of incident in a graphical format.</inlineHelpText>
    <label>Due Date Progress</label>
    <type>Text</type>
</CustomField>