force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__EmailServiceAddress__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EmailServiceAddress__c</fullName>
    <description>This field stores the email service address, which is used to create an incident record.</description>
    <label>Email Service Address</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>