force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Feedback_Last_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Feedback_Last_Submitted__c</fullName>
    <label>Feedback Last Submitted</label>
    <type>DateTime</type>
</CustomField>