force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__firstCallResolution__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__firstCallResolution__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if this incident is resolved in the first telephone call made to the staff.</inlineHelpText>
    <label>First Call Resolution</label>
    <type>Checkbox</type>
</CustomField>