force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__FKBMC_BaseElement__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Item /  Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__MarkAsDeleted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Incident</relationshipLabel>
    <relationshipName>Incident</relationshipName>
    <type>Lookup</type>
</CustomField>