force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__FKBroadcast__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBroadcast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broadcast</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__state__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an open and active broadcast.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Broadcasts__c</referenceTo>
    <relationshipLabel>Linked Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>