force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__FKBusinessService__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to link the incident to the service that is affected by the incident.</inlineHelpText>
    <label>Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__ClassID__c</field>
            <operation>equals</operation>
            <value>BMC_BUSINESSSERVICE</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__MarkAsDeleted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select the Business Service.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Incidents (Business Service)</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>