force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__FKClient__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the client for this record.</inlineHelpText>
    <label>Client ID</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) OR 3</booleanFilter>
        <filterItems>
            <field>$Source.BMCServiceDesk__FKAccount__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>User.BMCServiceDesk__Account__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.BMCServiceDesk__FKAccount__c</field>
            <operation>equals</operation>
            <valueField>User.Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents3</relationshipName>
    <type>Lookup</type>
</CustomField>