force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__FKRequestDetail__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKRequestDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Detail</label>
    <referenceTo>BMCServiceDesk__SRM_RequestDetail__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>