force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__FKServiceOffering__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKServiceOffering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link a service offering of the associated service.</inlineHelpText>
    <label>Service Offering</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__ClassID__c</field>
            <operation>equals</operation>
            <value>BMC_BUSINESSSERVICE</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__MarkAsDeleted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Incidents (Service Offering)</relationshipLabel>
    <relationshipName>ServiceOfferringIncidents</relationshipName>
    <type>Lookup</type>
</CustomField>