force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__followUp__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__followUp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if a follow up is required for this incident after you have closed the incident.</inlineHelpText>
    <label>Follow Up</label>
    <type>Checkbox</type>
</CustomField>