force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__followUpDateTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__followUpDateTime__c</fullName>
    <inlineHelpText>Use this field to set the date and time at which the follow up action must be initiated. This field is enabled when you select the Follow Up field.</inlineHelpText>
    <label>Follow Up Date</label>
    <type>DateTime</type>
</CustomField>