force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if the incident record is no longer valid, but the record has to be retained for compliance with the records retention policy. For example, if a client has left the account, all the client&apos;s incident records would be invalid.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>