force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__incidentDescription__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__incidentDescription__c</fullName>
    <inlineHelpText>Use this field to enter a description of the issue the client is reporting.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>