force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__incidentResolution__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__incidentResolution__c</fullName>
    <inlineHelpText>Use this field to specify what has been done to resolve the incident. Provide detailed solution instructions or describe why the incident cannot be resolved if it is not possible to provide a solution or workaround.</inlineHelpText>
    <label>Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>