force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Incorrect_category__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Incorrect_category__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark incidents with incorrect category</description>
    <label>Incorrect category</label>
    <type>Checkbox</type>
</CustomField>