force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Is_New_Record__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Is_New_Record__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to check whether incident is new or not.</description>
    <label>Is New Record</label>
    <type>Checkbox</type>
</CustomField>