force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Launch_console__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Launch_console__c</fullName>
    <formula>IF(!BMCServiceDesk__isServiceRequest__c,
HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=IncidentLaunchConsole&amp;recordName=&quot;+Name+&quot;&amp;recordId=&quot;+Id+&quot;&amp;incType=Incident&amp;isdtp=vw&amp;uiTheme=&quot;+$User.UIThemeDisplayed+&quot;&amp;formLayoutId=&quot;+ CASESAFEID(BMCServiceDesk__RF_FKLayout__c), $Label.bmcservicedesk__incidentrecordprefix+Name, &quot;_self&quot;),
HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=IncidentLaunchConsole&amp;recordName=&quot;+Name+&quot;&amp;recordId=&quot;+Id+&quot;&amp;incType=ServiceRequest&amp;isdtp=vw&amp;uiTheme=&quot;+$User.UIThemeDisplayed, $Label.bmcservicedesk__servicerequestprefix+Name, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record will be opened either in Incident Console or in Remedyforce Console tab</inlineHelpText>
    <label>Launch Console</label>
    <type>Text</type>
</CustomField>