force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__LockedRecordTimestamp__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LockedRecordTimestamp__c</fullName>
    <description>this field is used in case of record locking.</description>
    <label>LockedRecordTimestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>